<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="tampilanBuatJanji3RowModel" type="com.application.app.modules.tampilanbuatjanji1.data.model.TampilanBuatJanji3RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearGroup248"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameGroup249"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_64pxv"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh" android:layout_width="@dimen/_68pxh">
                <ImageView android:id="@+id/imageEllipse12"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_58pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_62pxh" android:scaleType="fitXY"/>
                <ImageView android:id="@+id/image51604271"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_64pxh"
                    android:layout_width="@dimen/_68pxh"
                    android:scaleType="fitXY" circular="@{true}"
                    imageRes="@{@drawable/img_51604271_5}" tools:src="@drawable/img_51604271_5"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtDrgLita"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{tampilanBuatJanji3RowModel.txtDrgLita}"
                style="@style/txtRalewaysemibold15_2" tools:text="@string/lbl_drg_lita"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtDokterGigi"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{tampilanBuatJanji3RowModel.txtDokterGigi}"
            style="@style/txtRalewaymedium12" tools:text="@string/lbl_dokter_gigi"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearGroup448"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_37pxh"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txt234"
                android:layout_height="wrap_content"
                android:layout_weight="0.44" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@{tampilanBuatJanji3RowModel.txt234}"
                style="@style/txtRalewaymedium12_1" tools:text="@string/lbl_234"/>
            <LinearLayout android:id="@+id/linearGroup225"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_weight="0.56" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageStar1"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_star1_3"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt38"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_weight="0.58"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{tampilanBuatJanji3RowModel.txt38}"
                    style="@style/txtRobotomedium12" tools:text="@string/lbl_3_8"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnBuatJanji"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13pxv"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_17pxh"
            android:paddingStart="@dimen/_18pxh"
            android:paddingTop="@dimen/_3pxv" android:singleLine="true"
            android:text="@string/lbl_buat_janji"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_buat_janji"/>
    </LinearLayout>
</layout>
