<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="tampilanMenu1RowModel" type="com.application.app.modules.tampilanmenu.data.model.TampilanMenu1RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
        <ImageView android:id="@+id/image51604271"
            android:layout_height="@dimen/_51pxh"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_51pxh"
            android:scaleType="fitXY" circular="@{true}"
            imageRes="@{@drawable/img_51604271_7}" tools:src="@drawable/img_51604271_7"/>
        <LinearLayout android:id="@+id/linearGroup76"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_18pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_weight="0.83" android:layout_width="0dp" android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearGroup71"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.63" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDrWAHDINISp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{tampilanMenu1RowModel.txtDrWAHDINISp}"
                    style="@style/txtRalewayromanmedium15" tools:text="@string/msg_dr_wahdini_sp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSpesialisAnak"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{tampilanMenu1RowModel.txtSpesialisAnak}"
                    style="@style/txtRalewaymedium12" tools:text="@string/lbl_spesialis_anak"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearGroup74"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_weight="0.37" android:layout_width="0dp" android:orientation="vertical">
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearGroup72"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageStar1"
                        android:layout_height="@dimen/_12pxh"
                        android:layout_width="@dimen/_12pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_star1_4"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txt5"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_weight="0.35"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{tampilanMenu1RowModel.txt5}"
                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl_5"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtBuatJanji"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingStart="@dimen/_11pxh"
                    android:paddingTop="@dimen/_6pxv"
                    android:singleLine="true"
                    android:text="@{tampilanMenu1RowModel.txtBuatJanji}"
                    style="@style/txtSolidRounded_2" tools:text="@string/lbl_buat_janji"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
